Adding the pomodoro clock

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,5 +106,5 @@
 		"width",
 		"zIndex"
 	],
-	"cSpell.words": ["skeletonlabs", "tailwindcss"]
+	"cSpell.words": ["Pomodoro", "skeletonlabs", "tailwindcss"]
 }
