--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	},
 	"devDependencies": {
 		"@floating-ui/dom": "^1.5.1",
+		"@iconify/json": "^2.2.110",
 		"@skeletonlabs/skeleton": "^1.11.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/vite-plugin-svelte": "^2.4.5",
 		"@tailwindcss/forms": "^0.5.4",
 		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -33,7 +35,11 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"unplugin-icons": "^0.16.6",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"n": "^9.1.0"
+	}
 }
